--- a/src/localcss/toast.css
+++ b/src/localcss/toast.css
@@ -4,7 +4,8 @@
 	position: fixed;
 	bottom: 12%;
 	left: 0;
-        pointer-events:none;
+    z-index:99999;
+    pointer-events:none;
 }
 
 #android_toast{
